Create new reservation form for product

--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -20,6 +20,10 @@ services:
 	- App\Components\ListProducts\IListProductsFactory
 	- App\Components\NewService\INewServiceFactory
 	- App\Components\ListServices\IListServicesFactory
+	- App\Model\Reservation\ReservationFacade
+	- App\Model\Reservation\ServiceReservation
+	- App\Model\Reservation\ProductReservation
+	- App\Components\ReserveProduct\IReserveProductFactory
 	router: App\Router\RouterFactory::createRouter
 
 
