Form for service reservation implementation

--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -24,6 +24,8 @@ services:
 	- App\Model\Reservation\ServiceReservation
 	- App\Model\Reservation\ProductReservation
 	- App\Components\ReserveProduct\IReserveProductFactory
+	- App\Components\ListReservations\IListReservationsFactory
+	- App\Components\ReserveService\IReserveServiceFactory
 	router: App\Router\RouterFactory::createRouter
 
 
